# PromptWeave

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  需求.txt
docs/superpowers/plans/: 2026-05-08-promptweave-mvp-foundation.md  2026-05-09-api-settings.md  2026-05-09-github-importer.md  2026-05-09-history-workflow.md  2026-05-09-image-preview.md  2026-05-09-importer-and-creation-params.md  2026-05-09-library-source-sync.md  2026-05-09-prompt-optimization-api.md  2026-05-09-template-assisted-optimizer.md  2026-05-09-template-library.md  2026-05-09-template-management.md
docs/superpowers/specs/: 2026-05-08-promptweave-design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  generation.rs  imports.rs  main.rs  prompt_api.rs  providers.rs  workspace.rs
src/components/: CreatorWorkspace.tsx  EmptyState.tsx  FeedbackMessage.tsx  HistoryPanel.tsx  ImportPanel.tsx  SettingsPanel.tsx  TemplateLibrary.tsx
src/lib/: exportFormats.test.ts  exportFormats.ts  localOptimizer.test.ts  localOptimizer.ts  workspace.ts
src/lib/services/: configService.ts  creatorService.ts  importService.ts  templateService.test.ts  templateService.ts
src/types/: backend.ts  prompt.ts
tasks/: todo.md
